[tool.poetry]
name = "boaz-snuh-llm-source-to-kg"
version = "0.1.0"
description = ""
authors = ["GU-0 <rjsgud5386@gmail.com>"]
readme = "README.md"
packages = [
    { include = "llm_source_to_kg", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"

google-generativeai = "^0.3.2"
pydantic = "^2.5.2"
python-dotenv = "^1.0.0"
typing-extensions = "^4.8.0"
langgraph = "^0.4.3"
boto3 = "^1.38.13"
json-repair = "^0.44.1"
graphviz = "^0.20.3"

[tool.poetry.scripts]
test-gemini = "llm_source_to_kg.test.test_gemini:main"
test-logger = "llm_source_to_kg.test.test_logger:main"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
